fixed overflow issue on homepage

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -66,6 +66,10 @@ span.fade {
 
 /* ------------------------- END animations */
 /* ------------------------------ home */
+body.home_body {
+    overflow: hidden;
+}
+
 .container-homepage {
   display: flex;
   flex-direction: column;
@@ -76,7 +80,9 @@ span.fade {
   gap: 10%;
   height: 100vh;
   box-sizing: border-box;
-  font-family: 'Italiana', serif; }
+  font-family: 'Italiana', serif; 
+  overflow: hidden;
+}
 
 .hp-col {
   flex: 1; }
@@ -406,6 +412,7 @@ body {
   font-family: 'Italiana', serif;
   font-size: large;
   font-weight: 800;
-  line-height: 1.5; }
+  line-height: 1.5; 
+}
 
 /* ------------------------------ END overall styling */
